Remove `loss_weights_mask` from `scalars` in spectral loss function. Add folder structure to the diagnostics (plots) output folder.

--- a/utils/config.yaml
+++ b/utils/config.yaml
@@ -49,6 +49,7 @@ diagnostics:
   plot:
     asynchronous: False
     format: svg
+    folder: True
     parameters:
     - 100u
     - 100v
@@ -142,6 +143,7 @@ model:
 training:
   training_loss:
     _target_: anemoi.training.losses.spectral.SpectralLoss
+    scalars: ['variable']
   variable_loss_scaling:
     pl: {}
     sfc: {}
